@@ -84,7 +84,7 @@ UNLOCK TABLES;
 
 LOCK TABLES `tconfig` WRITE;
 /*!40000 ALTER TABLE `tconfig` DISABLE KEYS */;
-INSERT INTO `tconfig` VALUES (1,'language_code','en'),(2,'block_size','25'),(3,'db_scheme_version','3.0'),(4,'db_scheme_build','ID110505'),(5,'date_format','F j, Y, g:i a'),(6,'currency','eu'),(7,'sitename','Integria Demo'),(8,'hours_perday','8'),(46,'FOOTER_EMAIL','Please do not respond directly this email, has been automatically created by Integria (http://integria.sourceforge.net).\r\n\r\nThanks for your time and have a nice day\r\n\r\n'),(45,'HEADER_EMAIL','Hello, \r\n\r\nThis is an automated message coming from Integria\r\n\r\n'),(47,'notification_period','24'),(12,'limit_size','1000'),(48,'mail_from','integria@localhost'),(49,'smtp_port','0'),(50,'smtp_host','localhost'),(51,'smtp_user',''),(52,'smtp_pass',''),(53,'pop_host',''),(54,'pop_user',''),(55,'pop_pass',''),(35,'timezone','Europe/Madrid'),(36,'autowu_completion','0'),(37,'no_wu_completion',''),(38,'fontsize','6'),(39,'incident_reporter','0'),(40,'show_creator_incident','1'),(41,'show_owner_incident','1'),(42,'pwu_defaultime','4'),(43,'iwu_defaultime','0.25'),(44,'api_acl','127.0.0.1, *'), (56,'auth_methods', 'mysql');
+INSERT INTO `tconfig` VALUES (1,'language_code','en'),(2,'block_size','25'),(3,'db_scheme_version','3.0'),(4,'db_scheme_build','ID110505'),(5,'date_format','F j, Y, g:i a'),(6,'currency','eu'),(7,'sitename','Integria Demo'),(8,'hours_perday','8'),(46,'FOOTER_EMAIL','Please do not respond directly this email, has been automatically created by Integria (http://integria.sourceforge.net).\r\n\r\nThanks for your time and have a nice day\r\n\r\n'),(45,'HEADER_EMAIL','Hello, \r\n\r\nThis is an automated message coming from Integria\r\n\r\n'),(47,'notification_period','24'),(12,'limit_size','1000'),(48,'mail_from','integria@localhost'),(49,'smtp_port','0'),(50,'smtp_host','localhost'),(51,'smtp_user',''),(52,'smtp_pass',''),(53,'pop_host',''),(54,'pop_user',''),(55,'pop_pass',''),(35,'timezone','Europe/Madrid'),(36,'autowu_completion','0'),(37,'no_wu_completion',''),(38,'fontsize','6'),(39,'incident_reporter','0'),(40,'show_creator_incident','1'),(41,'show_owner_incident','1'),(42,'pwu_defaultime','4'),(43,'iwu_defaultime','0.25'),(44,'api_acl','127.0.0.1, *'), (56,'auth_methods', 'mysql'),('wiki_plugin_dir', 'include/wiki/plugins/'),('conf_var_dir', 'wiki_data/');
 /*!40000 ALTER TABLE `tconfig` ENABLE KEYS */;
 UNLOCK TABLES;
 
